--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -1,19 +1,19 @@
 .main {
-  background-color: white;
+  background-color: #ffffff;
   width: 50%;
   margin: 7% auto;
   border-radius: 15px;
   padding:10px;
-  box-shadow: 1px 1px 5px rgb(151, 151, 151)
+  box-shadow: 1px 1px 5px #979797
 }
 h1 {
   font-family: Cursive;
   text-align: center;
 }
 #signup {
-  color: white;
-  background-color: rgb(54, 83, 247);;
+  color: #ffffff;
+  background-color: #3653f7;;
   border-radius: 5px;
   padding:5px 15px;
-  box-shadow: 1px 1px 5px rgb(108, 108, 245);
+  box-shadow: 1px 1px 5px #6c6cf5;
 }
