--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,11 +24,11 @@ input {
   border: 1px solid #ccc;
   border-radius: 5px;
   resize: vertical;
-  box-shadow: 1px 1px 5px rgb(182, 182, 182);
+  box-shadow: 1px 1px 5px #b6b6b6;
 }
 
 label {
-  padding: 10px;
+  padding: 10px 5px;
   display: inline-block;
 }
 /*.footer {
@@ -101,10 +101,10 @@ td:nth-of-type(3):before {content: "User:";}
 td:nth-of-type(4):before {content: "Delete:";}
 }
 .is-invalid {
-  border: 1px solid red;
+  border: 1px solid #ff0000;
 }
 .text-danger {
-  color:red;
+  color:#ff0000;
 
 }
 .d-none {
