--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         placeholder="email..." [class.is-invalid]="emailId.invalid && emailId.touched">
         <div *ngIf="emailId.errors && (emailId.invalid && emailId.touched)">
           <small  class="text-danger" *ngIf="emailId.errors?.required">Email is required</small>
-          <small  class="text-danger" *ngIf="emailId.errors?.pattern">Email is required</small>
+          <small  class="text-danger" *ngIf="emailId.errors?.pattern">Invalid required</small>
         </div>
       </div>
     </div>
@@ -24,6 +24,16 @@
         placeholder="password..." [class.is-invalid]="password.invalid && password.touched">
         <div *ngIf="password.errors && (password.invalid && password.touched)">
           <small  class="text-danger" *ngIf="password.errors?.required">Password is required</small>
+          <small  class="text-danger" *ngIf="password.errors?.pattern">
+            <ul>
+              <li>Password must have:</li>
+              <li>atleast one Capital alphabet</li>
+              <li>atleast one  Small alphabet</li>
+              <li>atleast one digit</li>
+              <li>atleast one special symbol</li>
+            </ul>
+          </small>
+          <small  class="text-danger" *ngIf="password.errors?.minlength">Password must have length of 7</small>
         </div>
       </div>
     </div>
