--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -11,7 +11,7 @@ h1 {
   text-align: center;
 }
 #signup {
-  color: #ffffff;
+  color: #222121;
   background-color: #75ec51;;
   border-radius: 5px;
   padding:5px 15px;
