--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/home" class="active" >Home</a>
     <a routerLink="/contact">Contact</a>
     <a routerLink="/about">About</a>
+    <a routerLink="/usersBlog"> All Users Blog</a>
     <div class="drop-down">
       <img src="./assets/images/smily.jpeg" alt="smily">
       <div class="dropdown">
