--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,4 +1,3 @@
-
 .nav {
   overflow: visible;
   background-color: #333;
@@ -10,9 +9,9 @@
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 17px;
   text-decoration: none;
-  font-size: 17px;
+  height: 49px;
 }
 .nav a:hover {
   background-color: #ddd;
@@ -26,13 +25,12 @@
 .drop-down {
   float: right
 }
-.drop-down form {
+.drop-down {
   float: right;
   padding: 5px;
-  margin: 5px;
 }
 img {
-  height: 45px;
+  height: 40px;
   width: auto;
 }
 .dropbtn {
@@ -40,12 +38,12 @@ img {
   color: white;
   border: none;
   padding: 5px;
+  
 }
 
 
 .dropdown {
   position: relative;
-  //display: inline-block;
   float: right;
   padding: 5px;
   margin: 5px;
@@ -53,17 +51,19 @@ img {
 
 .dropdown-content {
   display: none;
+  width: 71px;
   position: absolute;
   background-color: #f1f1f1;
   overflow: hidden;
-  //min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
+  width:100%;
+  height:30px;
   color: black;
-  padding: 2px 6px;
+  padding: 0px 3px;
   text-decoration: none;
   display: block;
 }
@@ -82,4 +82,3 @@ img {
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
 }
-
