--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -65,7 +65,11 @@
         </div>
       </div>
     </div>
-
+    <div class="row">
+      <div class="input">
+      <small>Already had an account ?<a routerLink="/login">Log In</a></small>
+      </div>
+    </div>
     <div class="row">
       <div class="input">
       <button id="signup" type="submit" [disabled]="userSignUp.invalid">Sign Up</button>
