--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,10 +98,10 @@ td:before {
   padding-right: 10px; 
   white-space: nowrap;
 }
-td:nth-of-type(1):before {content :"Task name:";}
-td:nth-of-type(2):before {content :"Total Hour:";}
-td:nth-of-type(3):before {content: "User:";}
-td:nth-of-type(4):before {content: "Delete:";}
+//td:nth-of-type(1):before {content :"Task name:";}
+//td:nth-of-type(2):before {content :"Total Hour:";}
+//td:nth-of-type(3):before {content: "User:";}
+//td:nth-of-type(4):before {content: "Delete:";}
 }
 .is-invalid {
   border: 1px solid #ff0000;
