--- a/src/app/users-blog/users-blog.component.html
+++ b/src/app/users-blog/users-blog.component.html
@@ -1,6 +1,7 @@
-<div class="main">
-  <div class="table">
+  <div class="heading">
     <h1>All Users Blogs </h1>
+  </div>
+  <div class="table">
     <table>
       <tbody id="tableBody">
         <tr *ngFor="let record of allUsersBlog; let i=index">
@@ -14,4 +15,4 @@
       </tbody>
     </table>
   </div>
- </div>
+ 
