--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,11 +1,16 @@
 
   <div class="nav"> 
     <a routerLink="/home" class="active" >Home</a>
-    <a routerLink="/contact">Contact</a>
     <a routerLink="/about">About</a>
-    <a routerLink="/usersBlog"> All Users Blog</a>
+    <a routerLink="/usersBlog"> All Blogs</a>
     <div class="drop-down">
-      <img src="./assets/images/smily.jpeg" alt="smily">
+      <div class="img-dd">
+        <img src="./assets/images/smily.jpeg" alt="smily">
+        <div class="img-dd-content">
+          <a routerLink="/profile">Profile</a>
+          <a routerLink="/logout">Log out</a>
+        </div>
+      </div>
       <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
