--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -31,7 +31,7 @@
 }
 img {
   height: 40px;
-  width: auto;
+  width: 60px;
 }
 .dropbtn {
   background-color: #4cafa2;
@@ -48,7 +48,12 @@ img {
   padding: 5px;
   margin: 5px;
 }
-
+.img-dd {
+  position: relative;
+  float: left;
+  //padding: 5px;
+  //margin: 5px;
+}
 .dropdown-content {
   display: none;
   width: 71px;
@@ -58,7 +63,15 @@ img {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
+.img-dd-content {
+  display: none;
+  width: 60px;
+  position: absolute;
+  background-color: #f1f1f1;
+  overflow: hidden;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 .dropdown-content a {
   width:100%;
   height:30px;
@@ -67,18 +80,44 @@ img {
   text-decoration: none;
   display: block;
 }
-
+.img-dd-content a {
+  width:100%;
+  height:30px;
+  color: black;
+  padding: 0px 3px;
+  text-decoration: none;
+  display: block;
+}
 
 .dropdown-content a:hover {
   background-color: #ddd;
 }
-
+.img-dd-content a:hover {
+  background-color: #ddd;
+}
 .dropdown:hover .dropdown-content {
   display: block;
   //overflow: hidden;
 }
 
 
+
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+}
+
+@media only screen and (max-width:600px) {
+  .dropbtn {
+    display: none;
+  }
+  .img-dd:hover .img-dd-content {
+    display: block;
+    //overflow: hidden;
+  }
+  img {
+    width: 30px;
+  }
+  .drop-down {
+    padding-left: 5px;
+  }
 }
