--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,4 @@
 
-  <div class="main">
   <h1><i>{{ title }}</i></h1>
   <form [formGroup]="userSignUp" class="form" (ngSubmit)="addCurrentUser()">
     <div class="row">
@@ -8,7 +7,7 @@
       </div>
       <div class="col-75">
         <input type="text" id="firstName" name=firstName formControlName="firstName"  
-          placeholder="first name..." [class.is-invalid]="firstName.invalid && firstName.touched">
+          placeholder="add first name..." [class.is-invalid]="firstName.invalid && firstName.touched">
         <div *ngIf="firstName.errors && (firstName.invalid && firstName.touched)">
           <small  class="text-danger" *ngIf="firstName.errors?.required">First name  is required</small>
           <small  class="text-danger" *ngIf="firstName.errors?.minlength">First name  must have 2 characters</small>
@@ -17,11 +16,11 @@
     </div>
     <div class="row">
       <div class="input col-25">
-        <label  for="lastName">Last Name:</label>
+        <label  for="lastName">Last name:</label>
       </div>
       <div class="col-75">
         <input type="text" id="lastName" name=lastName formControlName="lastName"  
-        placeholder="last name..." [class.is-invalid]="lastName.invalid && lastName.touched">
+        placeholder="add last name..." [class.is-invalid]="lastName.invalid && lastName.touched">
         <div *ngIf="lastName.errors && (lastName.invalid && lastName.touched)">
           <small  class="text-danger" *ngIf="lastName.errors?.required">Last name  is required</small>
           <small  class="text-danger" *ngIf="lastName.errors?.minlength">Last name  must have 2 characters</small>
@@ -35,7 +34,7 @@
       </div>
       <div class="col-75">
         <input type="emailId" id="emailId" name=emailId  formControlName="emailId"  
-        placeholder="email..." [class.is-invalid]="emailId.invalid && emailId.touched">
+        placeholder="add email..." [class.is-invalid]="emailId.invalid && emailId.touched">
         <div *ngIf="emailId.errors && (emailId.invalid && emailId.touched)">
           <small  class="text-danger" *ngIf="emailId.errors?.required">Email is required</small>
           <small  class="text-danger" *ngIf="emailId.errors?.pattern">Invalid email</small>
@@ -49,7 +48,7 @@
       </div>
       <div class="col-75">
         <input type="password" id="password" name=password formControlName="password"  
-        placeholder="password..." [class.is-invalid]="password.invalid && password.touched">
+        placeholder="add password..." [class.is-invalid]="password.invalid && password.touched">
         <div *ngIf="password.errors && (password.invalid && password.touched)">
           <small  class="text-danger" *ngIf="password.errors?.required">Password is required</small>
           <small  class="text-danger" *ngIf="password.errors?.pattern">
@@ -67,7 +66,7 @@
     </div>
     <div class="row">
       <div class="input">
-      <small>Already had an account ?<a routerLink="/login">Log In</a></small>
+      <small>Already have an account ?<a routerLink="/login">Log In</a></small>
       </div>
     </div>
     <div class="row">
@@ -78,4 +77,3 @@
   </form>
   {{ userSignUp.value | json }}
   
-  </div>
