implement modal, tooltip and popovers

--- a/src/app/add-blog/add-blog.component.html
+++ b/src/app/add-blog/add-blog.component.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="c-row">
       <div class="input">
       <button id="add" type="submit" [disabled]="blogForm.invalid">Add</button>
       </div>
