--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,12 +36,12 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input">
       <small>Want to create account ?<a routerLink="/addUser">Sign Up</a></small>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input">
       <button id="signup" type="submit" [disabled]="loginForm.invalid">Log in</button>
       </div>
