--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,7 @@ h1 {
   margin-top: 1%;
   background-color: orange;
 }
-.table {
+.blog-table {
   padding: 10px;
   text-align: center;
   margin: auto;
@@ -20,7 +20,7 @@ h1 {
 }
 table {
   background-color: white;
-  border-collapse: collapse;
+  border-collapse: collapse ;
   width: 100%;
 }
 td {
@@ -31,7 +31,7 @@ tr:nth-child(even) {
   background-color: #d6dbdb;
 }
 tr:hover {
-  background-color: #b0e9ee;
+  background-color: #eed5b0;
 }
 .edit-btn {
   background-color: aqua;
@@ -80,7 +80,7 @@ tr:hover {
 .cmt-s {
   color: #faf5f5;
   margin-right: 3px;
-  background-color: #4817f7;
+  background-color: #0492ca;
   border-radius:2px ;
   padding: 5px;
 }
@@ -91,19 +91,9 @@ tr:hover {
   margin-top: 20px;;
 }
 #like {
-  height:20px;
-  width: 20px;
-  //margin-top: 5px;
-  margin-right: 5px;
-  background-color: IN;
+  padding: 5px;
+  margin-right: 15px;
+  border-radius:2px ;
+  color: white ;
+  background-color: #0492ca;
 }
-.like-s {
-  //background-color: #3899c5;
-  position: relative;
-  margin-right: 20px;
-  margin-bottom: 15px;
-  padding-bottom: 10px;
-  font-size: 20px;
-  float:left;
-}
-
