--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -64,14 +64,14 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input">
       <small>Already have an account ?<a routerLink="/login">Log In</a></small>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input">
-      <button id="signup" type="submit" [disabled]="userSignUp.invalid">Sign Up</button>
+      <button id="signup" type="submit" [disabled]="userSignUp.invalid" >Sign Up</button>
       </div>
     </div>
   </form>
