--- a/src/app/users-blog/users-blog.component.html
+++ b/src/app/users-blog/users-blog.component.html
@@ -10,8 +10,8 @@
           <td class="b-title">{{ record.title }}</td>
           <td class="b-descp">{{ record.description }}</td>
           <td class="b-content">{{ record.content }}</td>
-          <td class="b-cmt" *ngIf="record.commentItems.length > 0"><span class="like-s"><img id="like" src="./assets/images/like2.png">{{ record.likeItems.length }}</span><span class="cmt-s">{{ record.commentItems.length }} Comments</span> </td>
-          <td class="b-cmt" *ngIf="record.commentItems.length == 0"><span class="like-s"><img id="like" src="./assets/images/like2.png">{{ record.likeItems.length }}</span><span class="cmt-s">{{ record.commentItems.length }} Comments</span> </td>
+          <td class="b-cmt" *ngIf="record.commentItems.length > 0"><span id="like" class="far fa-thumbs-up">{{ record.likeItems.length }}</span><span class="cmt-s">Comments {{ record.commentItems.length }}</span> </td>
+          <td class="b-cmt" *ngIf="record.commentItems.length == 0"><span id="like" class="far fa-thumbs-up">{{ record.likeItems.length }}</span><span class="cmt-s">Comments {{ record.commentItems.length }}</span> </td>
           <td class="b-date">{{ record.createdAt | date: 'MMM dd YYYY'}}</td>
           <td class=b-img   ><img src="./assets/images/nature.jpeg"></td>
         </tr> 
