--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 //@import '~/angular-notifier/src/styles.scss';
 
 body {
-  background-color: #f5f5e7;
+  background-color: #f5f5e7 !important;
 }
 * {
   box-sizing: border-box;
@@ -18,7 +18,7 @@ body {
 }*/
 .input {
   padding: 10px;
-  text-align: center;
+  text-align: center ;
   
 }
 input {
@@ -29,7 +29,9 @@ input {
   resize: vertical;
   box-shadow: 1px 1px 5px #b6b6b6;
 }
-
+.row {
+  text-align: center !important;
+}
 label {
   padding: 10px 5px;
   display: inline-block;
@@ -117,3 +119,6 @@ td:before {
 input:focus {
   background-color: #d6dbdb;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
