--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,23 @@
 
 <app-nav-bar></app-nav-bar>
   <div class="blog">
-    <h1>Your Blogs :  </h1>
-    <button (click)="navigate()" type="button">Add Blogs</button>
+    <h1>Your Blogs :</h1>
+    <button (click)="open()" type="button">Add Blogs</button>
   </div>
 
-  <div class="modal"  tabindex="-1" role="dialog"  [ngStyle]="{'display':display}">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-body">
-                <p>Do you want to delete the block?</p>
-            </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" (click)="deleteBlog()" >Yes</button>
-            <button type="button" class="btn btn-primary" (click)="onCloseHandled()" >No</button>
-          </div>
-        </div>
+  <ng-template #content let-modal>
+    <div class="modal-header">
+      <h2 class="modal-title mx-auto text-danger">Warring !</h2>
     </div>
-  </div>
+    <div class="modal-body ">
+      <p><strong>Do you want to delete the blog ?</strong></p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" ngbAutofocus class="btn btn-danger mr-4" (click)="modal.close('Close click'); deleteBlog()">Yes</button>
+      <button type="button" class="btn btn-primary mr-4" (click)="modal.close('Close click')">NO</button>
+    </div>
+  </ng-template>
+
   <ng-template #tipContent >
     <ul *ngFor="let like of blogLikes">
       <li *ngIf="blogLikes.length > 0">{{ like.user.firstName }}</li>
@@ -71,7 +71,7 @@
             </button>
           </td>
           <td class="b-date">{{ record.createdAt | date: 'MMM dd YYYY'}}</td>
-          <td class=b-img><img src="./assets/images/nature.jpeg"><button (click)="getBlogId(record.id)" class="del-btn" class="btn btn-primary mt-4" data-toggle="modal" data-target="#exampleModalCenter" type="button">Delete</button></td>
+          <td class=b-img><img src="./assets/images/nature.jpeg"><button (click)="getBlogId(record.id, content)" class="del-btn" class="btn btn-primary mt-4" data-toggle="modal" data-target="#exampleModalCenter" type="button">Delete</button></td>
         </tr>
       
       </tbody>
