--- a/src/app/add-blog/add-blog.component.html
+++ b/src/app/add-blog/add-blog.component.html
@@ -50,7 +50,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary mr-4" (click)="activeModal.close('Close click'); addBlog()">Save</button>
+    <button type="button" class="btn btn-primary mr-4" (click)="addBlog() ">Save</button>
     <button type="button" class="btn btn-secondary mr-2" (click)="activeModal.close('Close click')">Close</button>
   </div>
 
