--- a/src/app/users-blog/users-blog.component.scss
+++ b/src/app/users-blog/users-blog.component.scss
@@ -3,6 +3,7 @@
   text-align: left;
 }
 .blog-table {
+  width: 60%;
   padding: 10px;
   text-align: center;
   margin: auto;
@@ -17,12 +18,12 @@ td {
   text-align: center;
   padding: 8px;
 }
-
+/*
 tr:nth-child(even) {
   background-color: #d6dbdb;
-}
+}*/
 tr:hover {
-  background-color: #8efaa9;
+  background-color: #d6dbdb;
 }
 .b-user{
   text-align: left;
@@ -63,9 +64,9 @@ tr:hover {
 .cmt-s {
   color: #faf5f5;
   margin-right: 3px;
-  background-color: #0492ca;
+  /*background-color: #0492ca;*/
   border-radius:2px ;
-  padding: 5px;
+  /*padding: 5px;*/
 }
 .cmt-v{
   margin-left: 20px;
@@ -78,9 +79,9 @@ tr:hover {
   margin-top: 20px;;
 }
 #like {
-  padding: 5px;
+  /*padding: 5px;*/
   margin-right: 15px;
   border-radius:2px ;
   color: white;
-  background-color: #0492ca;
+  /*background-color: #0492ca;*/
 }
