--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-
+<!--
   <div class="nav"> 
     <a routerLink="/home" class="active" >Home</a>
     <a routerLink="/about">About</a>
@@ -14,11 +14,33 @@
       <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-          <a >Profile</a>
+          <a routerLink="/profile">Profile</a>
           <a (click)="logout()">Logout</a>
         </div>
       </div>
     </div>
   </div>
+  -->
+  <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="navbar navbar-light mynav" style="background-color: #6df0f2;">
+  <li [ngbNavItem]="1">
+    <a ngbNavLink routerLink='/home' class="text"><b>Home</b></a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </li>
+  <li [ngbNavItem]="2">
+    <a ngbNavLink routerLink='/usersBlog'><b>All Blogs</b></a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </li>
+  <li ngbDropdown class="nav-item ml-auto">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle><i class="fa fa-fw fa-user mr-1 5x"></i>Dropdown</a>
+    <div ngbDropdownMenu>
+      <a routerLink="/profile" ngbDropdownItem>Profile</a>
+      <div class="dropdown-divider"></div>
+      <button ngbDropdownItem (click)="logout()">Logout</button>
+    </div>
+  </li>
+</ul>
 
+<div [ngbNavOutlet]="nav" class="mt-2"></div>
 
