--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,4 +1,4 @@
-.nav {
+/*.nav {
   overflow: visible;
   background-color: #333;
   margin:0px 0px 10px 0px;
@@ -117,7 +117,29 @@ img {
   img {
     width: 30px;
   }
+
   .drop-down {
     padding-left: 5px;
   }
+}
+*/
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+ }
+ li:hover {
+  background-color: #0704c9;
+}
+li a:hover {
+  color: white;
+}
+li {
+  height: 45px;
+}
+.mynav {
+  height: 45px;
+  padding: 0px;
+}
+.dropdown-content {
+  height: 20px;
 }
