--- a/src/app/users-blog/users-blog.component.html
+++ b/src/app/users-blog/users-blog.component.html
@@ -1,3 +1,4 @@
+  <app-nav-bar></app-nav-bar>
   <div class="heading">
     <h1>All Users Blogs </h1>
   </div>
@@ -34,7 +35,7 @@
           <td class="b-descp">{{ record.description }}</td>
           <td class="b-content">{{ record.content }}</td>
           <td class="b-cmt" *ngIf="record.commentItems.length > 0">
-            <button type="button" class="btn btn-primary btn-sm pr-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(record.id)>
+            <button type="button" class="btn btn-primary btn-sm pr-1 pl-3" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(record.id)>
               <span id="like" class="far fa-thumbs-up">
                 {{ record.likeItems.length }}
               </span>
@@ -46,7 +47,7 @@
             </button>
           </td>
           <td class="b-cmt" *ngIf="record.commentItems.length == 0">
-            <button type="button" class="btn btn-primary btn-sm pr-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)="increaseLikes(record.id)">
+            <button type="button" class="btn btn-primary btn-sm pr-1 pl-3" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)="increaseLikes(record.id)">
               <span id="like" class="far fa-thumbs-up">{{ record.likeItems.length }}</span>
             </button>
             <button type="button" class="btn btn-primary ml-3 btn-sm" [ngbPopover]="popContent" [popoverTitle]="popTitle" (click)="getComments(i)">
