generate entry and user-portal module

--- a/src/app/entry/login/login.component.html
+++ b/src/app/entry/login/login.component.html
@@ -38,7 +38,7 @@
     </div>
     <div class="c-row">
       <div class="input">
-      <small>Want to create account ?<a routerLink="/addUser">Sign Up</a></small>
+      <small>Want to create account ?<a routerLink="/entry/sign-up">Sign Up</a></small>
       </div>
     </div>
     <div class="c-row">
