--- a/src/app/entry/sign-up/sign-up.component.html
+++ b/src/app/entry/sign-up/sign-up.component.html
@@ -66,7 +66,7 @@
     </div>
     <div class="c-row">
       <div class="input">
-      <small>Already have an account ?<a routerLink="/login">Log In</a></small>
+      <small>Already have an account ?<a routerLink="/entry/login">Log In</a></small>
       </div>
     </div>
     <div class="c-row">
